Updates Nature Footer with improvements (#753)
* Bumps brand context version for Nature Footer component

* Updates data to be more consistent with live and test wrapping of sections

* Removes dependency on utility classnames and Media component

* Variablising things for tidyness points

* History and packcage.json for bump to v3.0.0

* Removes u-hide-print classnames as mixin now exists in default brand context

--- a/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
@@ -6,6 +6,11 @@
 	font-size: $footer--font-size;
 }
 
+.c-footer__container {
+	@include u-container;
+	@include u-hide-print;
+}
+
 .c-footer a {
 	@include u-link-inherit();
 	vertical-align: middle;
@@ -87,8 +92,38 @@
 	font-family: $footer--heading-font-family;
 }
 
+.c-footer__heading--visually-hidden {
+	@include u-visually-hidden;
+}
+
 .c-footer__item {
 	&:not(:last-child) {
 		margin-bottom: 4px;
 	}
+}
+
+.c-footer__menu {
+	@include u-list-reset;
+	display: flex;
+	font-size: $footer--menu-font-size;
+	font-family: $footer--menu-font-family;
+	line-height: $footer--menu-line-height;
+}
+
+.c-footer__menu:not(:last-child) {
+	margin-right: spacing(32);
+}
+
+.c-footer__menu-item:not(:last-child) {
+	margin-right: spacing(16);
+}
+
+.c-footer__menu-link {
+	display: inline-block;
+	text-decoration: none;
+	color: inherit;
+}
+
+.c-footer__menu-icon {
+	@include u-icon();
 }
