Fix font size and colour issue

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
@@ -9,6 +9,10 @@
 		right: 0;
 	}
 
+	&__content-item {
+		font-size: .75rem;
+	}
+
 	&__open {
 		@include u-focus-outline;
 		text-decoration: none;
