--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -32,7 +32,7 @@
 
 		&:hover {
 			background-color: map-get($context--colors, universal-blue);
-			color: map-get($context--colors, 'white');
+			color: color('white');
 		}
 	}
 
