add examples with no border top

--- a/toolkits/nature/packages/nature-section-heading/view/section-heading.hbs
+++ b/toolkits/nature/packages/nature-section-heading/view/section-heading.hbs
@@ -1,4 +1,4 @@
-<div class="c-section-heading">
+<div class="c-section-heading {{no-bt}}">
 	{{#if url}}
 	<h2>
 		<a href="{{url}}" class="c-section-heading__link">
