remove u-icon and adjust spacing of icon

--- a/toolkits/nature/packages/nature-section-heading/scss/10-settings/section-heading.scss
+++ b/toolkits/nature/packages/nature-section-heading/scss/10-settings/section-heading.scss
@@ -4,4 +4,4 @@ $section-heading--padding--top: spacing(8);
 $section-heading--padding--bottom: spacing(8);
 $section-heading--margin-bottom: spacing(24);
 $section-heading--line-height: 1.4;
-$section-heading--icon-size: 1.25rem;
+$section-heading--icon-spacing: spacing(4);
