--- a/toolkits/nature/packages/nature-section-heading/scss/50-components/section-heading.scss
+++ b/toolkits/nature/packages/nature-section-heading/scss/50-components/section-heading.scss
@@ -28,5 +28,5 @@
 }
 
 .c-section-heading__icon {
-	@include u-icon($section-heading--icon-size, $section-heading--icon-size);
+	margin-left: $section-heading--icon-spacing;
 }
