--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Fri, 29 Apr 2022 12:04:04 GMT
+// Generated on Mon, 27 Jun 2022 09:45:32 GMT
 
-$tokens--state-focus: #ffcc00;
+$tokens--state-focus: #0088cc;
 $tokens--state-error: #c40606;
 $tokens--state-warning: #f58220;
 $tokens--state-success: #00a69d;
