--- a/context/brand-context/default/scss/00-tokens/_button.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_button.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Fri, 29 Apr 2022 12:04:04 GMT
+// Generated on Mon, 27 Jun 2022 09:45:32 GMT
 
-$tokens--button-background-primary-resting: #025e8d;
+$tokens--button-background-primary-resting: #01324b;
 $tokens--button-background-primary-hover: #ffffff;
 $tokens--button-background-secondary-resting: #ffffff;
-$tokens--button-background-secondary-hover: #025e8d;
+$tokens--button-background-secondary-hover: #01324b;
