README and versioning

--- a/toolkits/global/packages/global-forms/demo/index.hbs
+++ b/toolkits/global/packages/global-forms/demo/index.hbs
@@ -1,8 +1,10 @@
 <h1>Basic form</h1>
 
-{{#with form1}}
-	{{> errorSummary errorSummary}}
-	{{#each fieldsets}}
-		{{> fieldset }}
-	{{/each}}
-{{/with}}
+<form>
+	{{#with form1}}
+		{{> errorSummary errorSummary}}
+		{{#each fieldsets}}
+			{{> fieldset }}
+		{{/each}}
+	{{/with}}
+</form>
