--- a/context/brand-context/default/scss/00-tokens/_border.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_border.variables.scss
@@ -1,10 +1,10 @@
 
 // Do not edit directly
-// Generated on Tue, 28 Jun 2022 09:55:43 GMT
+// Generated on Tue, 28 Jun 2022 10:44:21 GMT
 
-$tokens--border-color-primary: #000000;
+$tokens--border-color-primary: #222222;
 $tokens--border-color-input: #555555;
-$tokens--border-color-button: #025e8d;
+$tokens--border-color-button: #01324b;
 $tokens--border-color-indent: #dadada;
 $tokens--border-radius-50: 2px;
 $tokens--border-radius-100: 4px;
