--- a/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
@@ -1,5 +1,5 @@
-// Generated on 28/06/2022, 13:41:11
+// Generated on 28/06/2022, 15:00:47
 // Source: design-tokens/componenets/springer/global-forms/springer.json
 // DO NOT edit directly
 
-$global-forms-field-stack-spacing: $tokens--spacing-relative-100;
+$global-forms-field-stack-spacing: .25rem;
