token regeneration and textarea whitespace removal

--- a/toolkits/global/packages/global-forms/view/fields/textarea.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/textarea.hbs
@@ -5,6 +5,4 @@
 <textarea
 	class="c-forms__input c-forms__input--textarea"
 	{{> inputCommonAttributes}}
->
-	{{value}}
-</textarea>
+>{{value}}</textarea>
