optional text inputs and label for connection

--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -66,6 +66,7 @@
 
 .c-forms__input[disabled] {
 	cursor: not-allowed;
+	border-color: $global-forms-input-border-color-disabled;
 }
 
 .c-forms__label {
