--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 28/06/2022, 15:36:24
+// Generated on 29/06/2022, 13:11:51
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -15,6 +15,7 @@ $global-forms-indent-border-color: #dadada;
 $global-forms-indent-border-radius: 4px;
 $global-forms-indent-border-width: 8px;
 $global-forms-input-background-color: #ffffff;
+$global-forms-input-border-color-disabled: #dadada;
 $global-forms-input-border-color-error: #c40606;
 $global-forms-input-border-color-resting: #222222;
 $global-forms-input-border-width: 1px;
