improved usage example

--- a/toolkits/global/packages/global-forms/demo/index.hbs
+++ b/toolkits/global/packages/global-forms/demo/index.hbs
@@ -2,7 +2,9 @@
 
 <form>
 	{{#with form1}}
-		{{> errorSummary errorSummary}}
+		{{#with errorSummary}}
+			{{> errorSummary }}
+		{{/with}}
 		{{#each fieldsets}}
 			{{> fieldset }}
 		{{/each}}
