file input in demo

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 29/06/2022, 13:11:51
+// Generated on 29/06/2022, 14:55:09
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -24,7 +24,7 @@ $global-forms-input-font-color: #000000;
 $global-forms-input-font-size: 1rem;
 $global-forms-input-font-weight: 400;
 $global-forms-input-padding-block: .5rem;
-$global-forms-input-padding-inline: 1rem;
+$global-forms-input-padding-inline: .5rem;
 $global-forms-input-stack-spacing: .25rem;
 $global-forms-input-width-maximum: 70ch;
 $global-forms-label-color: #000000;
