grey hint color

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 29/06/2022, 14:55:09
+// Generated on 29/06/2022, 22:08:16
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -11,6 +11,7 @@ $global-forms-field-stack-spacing: 1.5rem;
 $global-forms-heading-font-family: serif;
 $global-forms-heading-font-size: 2.5rem;
 $global-forms-heading-font-weight: 300;
+$global-forms-hint-color: #666666;
 $global-forms-indent-border-color: #dadada;
 $global-forms-indent-border-radius: 4px;
 $global-forms-indent-border-width: 8px;
