--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -77,6 +77,7 @@
 .c-forms__hint {
 	font-weight: $global-forms-input-font-weight;
 	margin-top: $global-forms-input-stack-spacing;
+	color: $global-forms-hint-color;
 }
 
 .c-forms__error {
