--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 29/06/2022, 22:08:16
+// Generated on 30/06/2022, 08:09:54
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -42,5 +42,5 @@ $global-forms-message-icon-color-error: #c40606;
 $global-forms-message-icon-color-resting: #000000;
 $global-forms-radio-carat-color: #000000;
 $global-forms-radio-carat-size: .5rem;
-$global-forms-radio-carat-spacing: .5rem;
+$global-forms-radio-carat-spacing: 1rem;
 $global-forms-select-icon-stroke: #000000;
