--- a/toolkits/global/packages/global-forms/view/fieldset.hbs
+++ b/toolkits/global/packages/global-forms/view/fieldset.hbs
@@ -3,7 +3,7 @@
 		<legend class="c-forms__legend">{{{legend}}}</legend>
 	{{/if}}
 	{{#each fields}}
-		<div class="c-forms__field"{{#if id}} id="{{id}}"{{/if}}>
+		<div class="c-forms__field">
 			{{> (lookup . 'type')}}
 		</div>
 	{{/each}}
