--- a/toolkits/global/packages/global-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-footer/scss/10-settings/default.scss
@@ -26,3 +26,7 @@ $footer--legal-margin-top: spacing(4);
 $footer--item-margin-right: spacing(24);
 $footer--item-line-height: 2;
 
+$footer--menu-line-height: 1.3;
+$footer--menu-font-size: 1rem;
+$footer--menu-font-family: $context--font-family-sans;
+
