--- a/toolkits/global/packages/global-footer/scss/50-components/footer.scss
+++ b/toolkits/global/packages/global-footer/scss/50-components/footer.scss
@@ -7,7 +7,8 @@
 }
 
 .c-footer__container {
-	@include u-container();
+	@include u-container;
+	@include u-hide-print;
 }
 
 .c-footer__links {
@@ -93,6 +94,10 @@ button.c-footer__link {
 	margin-bottom: $footer--spacing-medium;
 	font-weight: bold;
 	font-family: $footer--heading-font-family;
+}
+
+.c-footer__heading--visually-hidden {
+	@include u-visually-hidden;
 }
 
 .c-footer__item {
