--- a/context/brand-context/default/scss/00-tokens/_icon.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_icon.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Thu, 30 Jun 2022 07:09:54 GMT
+// Generated on Thu, 30 Jun 2022 15:20:58 GMT
 
 $tokens--icon-checkbox-checked-stroke: #ffffff;
-$tokens--icon-checkbox-checked-fill: #000000;
+$tokens--icon-checkbox-checked-fill: #01324b;
 $tokens--icon-select-stroke: #000000;
