--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,20 +1,17 @@
-// Generated on 30/06/2022, 08:09:54
+// Generated on 30/06/2022, 16:20:58
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
-$global-forms-checkbox-checked-background-color: #01324b;
-$global-forms-checkbox-checked-icon-fill: #000000;
-$global-forms-checkbox-checked-icon-path: "path/to/icon.svg";
-$global-forms-checkbox-checked-icon-stroke: #ffffff;
-$global-forms-checkbox-size: 1.5rem;
+$global-forms-checkbox-checked-icon-data-uri: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="white" stroke-linejoin="round" fill="none" stroke-linecap="round" viewBox="0 0 20 20"><path d="M4.5,11 10,15 16,5"></path></svg>';
+$global-forms-checkbox-checked-icon-fill: #01324b;
+$global-forms-checkbox-checked-icon-stroke: #01324b;
+$global-forms-checkbox-size: 1rem;
+$global-forms-checkbox-spacing: .5rem;
 $global-forms-field-stack-spacing: 1.5rem;
-$global-forms-heading-font-family: serif;
-$global-forms-heading-font-size: 2.5rem;
-$global-forms-heading-font-weight: 300;
 $global-forms-hint-color: #666666;
+$global-forms-hint-font-weight: 400;
 $global-forms-indent-border-color: #dadada;
 $global-forms-indent-border-radius: 4px;
-$global-forms-indent-border-width: 8px;
 $global-forms-input-background-color: #ffffff;
 $global-forms-input-border-color-disabled: #dadada;
 $global-forms-input-border-color-error: #c40606;
@@ -31,16 +28,7 @@ $global-forms-input-width-maximum: 70ch;
 $global-forms-label-color: #000000;
 $global-forms-label-font-size: 1rem;
 $global-forms-label-font-weight: 700;
-$global-forms-legend-font-family: serif;
-$global-forms-legend-font-size: 2rem;
-$global-forms-legend-font-weight: 400;
 $global-forms-message-color-error: #c40606;
-$global-forms-message-color-resting: #000000;
-$global-forms-message-font-size: 1rem;
-$global-forms-message-font-weight: 400;
 $global-forms-message-icon-color-error: #c40606;
 $global-forms-message-icon-color-resting: #000000;
-$global-forms-radio-carat-color: #000000;
-$global-forms-radio-carat-size: .5rem;
-$global-forms-radio-carat-spacing: 1rem;
-$global-forms-select-icon-stroke: #000000;
+$global-forms-message-icon-size: 1rem;
