--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -16,7 +16,7 @@
 	position: relative;
 }
 
-.c-forms__field,
+.c-forms__fieldset,
 .c-forms__error-summary {
 	font-size: $global-forms-input-font-size;
 }
@@ -31,16 +31,14 @@
 	border: 0;
 }
 
-.c-forms__input,
 .c-forms__error-summary,
+.c-forms__fieldset,
 .c-forms__input-container {
 	max-width: $global-forms-input-width-maximum;
 }
 
-.c-forms__field + .c-forms__field,
-.c-forms__fieldset + .c-forms__field,
-.c-forms__field + .c-forms__fieldset,
-.c-forms__fieldset + .c-forms__fieldset {
+* + .c-forms__fieldset,
+* + .c-forms__field {
 	margin-top: $global-forms-field-stack-spacing;
 }
 
@@ -212,6 +210,7 @@ legend+.c-forms__field.c-forms__label {
 }
 
 .c-forms__error-summary {
+	background-color: $global-forms-input-background-color;
 	box-sizing: border-box;
 	display: flex;
 	gap: $global-forms-input-padding-inline;
@@ -235,6 +234,7 @@ legend+.c-forms__field.c-forms__label {
 
 .c-forms__error-summary-errors a {
 	color: inherit;
+	text-decoration: underline;
 }
 
 .c-forms__error-summary-title {
