--- a/toolkits/global/packages/global-forms/view/fields/radios.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/radios.hbs
@@ -1,5 +1,5 @@
 {{#if inputs}}
-	<fieldset class="c-forms__fieldset c-forms__field" {{#unless legend}} role="presentation"{{/unless}} {{> inputCommonAttributes}}>
+	<fieldset class="c-forms__fieldset c-forms__field c-forms__radios" {{#unless legend}} role="presentation"{{/unless}} {{> inputCommonAttributes}}>
 		{{#if legend}}
 			<legend class="c-forms__label">{{legend}}</legend>
 		{{else}}
