copy change for clarity over select[multiple]

--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -17,3 +17,4 @@
 {{#if capture}} capture="{{capture}}"{{/if}}
 {{#if rows}} rows="{{rows}}"{{/if}}
 {{#if cols}} cols="{{cols}}"{{/if}}
+{{#if class}} class="{{class}}"{{/if}}
