'type' terminology to 'template'

--- a/toolkits/global/packages/global-forms/view/fields/buttons.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/buttons.hbs
@@ -1,7 +1,7 @@
 <div class="c-forms__field c-forms__buttons">
 	{{#each buttons}}
 		<button
-			type="{{type}}"
+			{{#if type}}type="{{type}}"{{else}}type="button"{{/if}}
 			class="u-button{{#each modifiers}} u-button--{{.}}{{/each}}"
 			{{> inputCommonAttributes}}
 		>
