--- a/toolkits/global/packages/global-forms/view/fields/radio.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/radio.hbs
@@ -5,7 +5,7 @@
 		<fieldset class="c-forms__fieldset c-forms__radio-fields">
 			{{#each fields}}
 				<div class="c-forms__field">
-					{{> (lookup . 'type')}}
+					{{> (lookup . 'template')}}
 				</div>
 			{{/each}}
 		</fieldset>
