chore: add missing trailing semicolon

--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -92,7 +92,7 @@
 }
 
 .c-forms__error {
-	color: $global-forms-message-color-error
+	color: $global-forms-message-color-error;
 }
 
 label+.c-forms__error,
