--- a/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/inputCommonAttributes.hbs
@@ -17,3 +17,6 @@
 {{#if capture}} capture="{{capture}}"{{/if}}
 {{#if rows}} rows="{{rows}}"{{/if}}
 {{#if cols}} cols="{{cols}}"{{/if}}
+{{#if attributes}}
+	{{#each attributes}} {{@key}}="{{this}}"{{/each}}
+{{/if}}
