--- a/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormRadio.hbs
@@ -1,5 +1,5 @@
 <label class="c-forms__label c-forms__label--wrapper">
-	<input class="c-forms__input c-forms__input--radio" type="radio" {{> inputCommonAttributes}}>
+	<input class="c-forms__input c-forms__input--radio" type="radio" {{> globalFormAttributes}}>
 	<span class="c-forms__label c-forms__label--inline c-forms__label--radio">{{label}}</span>
 	{{#if fields}}
 		<fieldset class="c-forms__fieldset c-forms__radio-fields">
