--- a/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
@@ -1,11 +1,11 @@
-{{> label}}
+{{> globalFormLabel}}
 {{#if error}}
-	{{> error}}
+	{{> globalFormError}}
 {{/if}}
 <div class="c-forms__input-container c-forms__input-container--select">
 	<select
 		class="c-forms__input c-forms__input--select"
-		{{> inputCommonAttributes}}
+		{{> globalFormAttributes}}
 	>
 		{{#each options}}
 			<option
@@ -18,7 +18,7 @@
 	</select>
 	<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
 		<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
-			{{> iconSelect }}
+			{{> globalFormIconSelect }}
 		</svg>
 	</span>
 </div>
