--- a/toolkits/global/packages/global-forms/view/fields/globalFormEmail.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormEmail.hbs
@@ -1,7 +1,7 @@
-{{> label}}
+{{> globalFormLabel}}
 {{#if error}}
-	{{> error}}
+	{{> globalFormError}}
 {{/if}}
 <input type="email" class="c-forms__input c-forms__input--email"
-	   {{> inputCommonAttributes}}
+	   {{> globalFormAttributes}}
 />
