--- a/toolkits/global/packages/global-forms/view/globalFormErrorSummary.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormErrorSummary.hbs
@@ -2,7 +2,7 @@
 	<div class="c-forms__error-summary-icon">
 		<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
 			<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
-				{{> iconError }}
+				{{> globalFormIconError }}
 			</svg>
 		</span>
 	</div>
