clear up template references

--- a/toolkits/global/packages/global-forms/demo/index.hbs
+++ b/toolkits/global/packages/global-forms/demo/index.hbs
@@ -3,10 +3,10 @@
 <form>
 	{{#with form1}}
 		{{#with errorSummary}}
-			{{> errorSummary }}
+			{{> globalFormErrorSummary }}
 		{{/with}}
 		{{#each fieldsets}}
-			{{> fieldset }}
+			{{> globalFormFieldset }}
 		{{/each}}
 	{{/with}}
 </form>
