--- a/toolkits/global/packages/global-forms/view/fields/globalFormButtons.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormButtons.hbs
@@ -3,7 +3,7 @@
 		<button
 			{{#if type}}type="{{type}}"{{else}}type="button"{{/if}}
 			class="u-button{{#each modifiers}} u-button--{{.}}{{/each}}"
-			{{> inputCommonAttributes}}
+			{{> globalFormAttributes}}
 		>
 			{{label}}
 		</button>
