--- a/toolkits/global/packages/global-forms/view/globalFormAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormAttributes.hbs
@@ -17,6 +17,6 @@
 {{#if capture}} capture="{{capture}}"{{/if}}
 {{#if rows}} rows="{{rows}}"{{/if}}
 {{#if cols}} cols="{{cols}}"{{/if}}
-{{#if attributes}}
-	{{#each attributes}} {{@key}}="{{this}}"{{/each}}
+{{#if dataAttrs}}
+	{{#each dataAttrs}} data-{{@key}}="{{this}}"{{/each}}
 {{/if}}
