--- a/toolkits/nature/packages/nature-section-heading/demo/index.hbs
+++ b/toolkits/nature/packages/nature-section-heading/demo/index.hbs
@@ -1,13 +1,18 @@
 <div>
 	{{> nature-section-heading }}
-	<p>The ambitious observatory has arrived at its home — near a gravitationally stable spot called L2 — for a premier view of the Universe.</p>
+	<p>The ambitious observatory has arrived at its home — near a gravitationally stable spot called
+		L2 — for a premier view of the Universe.</p>
 
-	{{> nature-section-heading text='Heading text with link' url='https://www.example.com' }}
-	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about the same time as a decades-long drought gripped parts of the planet.</p>
+	{{> nature-section-heading text='Heading text with link' url='JavaScript:Void(0);' }}
+	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about
+		the same time as a decades-long drought gripped parts of the planet.</p>
 
 	{{> nature-section-heading text="Heading text with no border" no-bt="c-section-heading--no-bt"}}
-	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about the same time as a decades-long drought gripped parts of the planet.</p>
+	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about
+		the same time as a decades-long drought gripped parts of the planet.</p>
 
-	{{> nature-section-heading text="Heading text with link and no border" url='https://www.example.com' no-bt="c-section-heading--no-bt"}}
-	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about the same time as a decades-long drought gripped parts of the planet.</p>
+	{{> nature-section-heading text="Heading text with link and no border" url='JavaScript:Void(0);'
+	no-bt="c-section-heading--no-bt" level="4"}}
+	<p>People abandoned thriving cities in Mesopotamia, the Indus Valley and farther afield at about
+		the same time as a decades-long drought gripped parts of the planet.</p>
 </div>
