--- a/toolkits/springer/packages/springer-hero/scss/10-settings/springer-hero.scss
+++ b/toolkits/springer/packages/springer-hero/scss/10-settings/springer-hero.scss
@@ -1,3 +1,5 @@
 $hero--padding: spacing(32);
+$hero--content-basis: 35rem;
+$hero--image-min: 50%;
 // TODO: Move color to brand-context
 $hero--background-color: color('corporate');
