--- a/toolkits/springer/packages/springer-hero/demo/index.hbs
+++ b/toolkits/springer/packages/springer-hero/demo/index.hbs
@@ -2,6 +2,8 @@
 {{>hero default}}
 <h2 class="u-mt-32">Default without <code>imgSrc</code></h2>
 {{>hero defaultNoImage}}
+<h2 class="u-mt-32">Default with wider content area (<code>contentWidth</code>)</h2>
+{{>hero widerContent}}
 <h2 class="u-mt-32">Custom background color</h2>
 {{>hero customColor}}
 <h2 class="u-mt-32">Custom background color with no <code>content</code></h2>
