--- a/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
+++ b/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
@@ -5,14 +5,14 @@
 				<img src="{{imageSrc}}" alt=""/>
 			</div>
 		{{/if}}
-		<div class="c-hero__content"{{#if contentBasis}} style="--hero--content-basis: {{contentBasis}}"{{/if}}>
+		<div class="c-hero__content" style="{{#if contentBasis}}--hero--content-basis: {{contentBasis}};{{/if}}{{#if paddingInline}}--hero--content-padding-inline:{{paddingInline}};{{/if}}{{#if paddingBlock}}--hero--content-padding-block:{{paddingBlock}};{{/if}}">
 			<h1>{{title}}</h1>
 			{{#if content}}
 				{{{content}}}
 			{{/if}}
 		</div>
 	{{else}}
-		<div class="c-hero__content"{{#if contentBasis}} style="--hero--content-basis: {{contentBasis}}"{{/if}}>
+		<div class="c-hero__content" style="{{#if contentBasis}}--hero--content-basis: {{contentBasis}};{{/if}}{{#if paddingInline}}--hero--content-padding-inline:{{paddingInline}};{{/if}}{{#if paddingBlock}}--hero--content-padding-block:{{paddingBlock}};{{/if}}">
 			<h1>{{title}}</h1>
 			{{#if content}}
 				{{{content}}}
