--- a/toolkits/springer/packages/springer-hero/scss/10-settings/springer-hero.scss
+++ b/toolkits/springer/packages/springer-hero/scss/10-settings/springer-hero.scss
@@ -1,5 +1,6 @@
 $hero--padding: spacing(32);
-$hero--content-basis: 35rem;
+$hero--content-basis: 33.333%;
+$hero--content-min: 35rem;
 $hero--image-min: 50%;
 $hero--content-padding-inline: 3rem;
 $hero--content-padding-block: 3rem;
