--- a/toolkits/springer/packages/springer-hero/demo/index.hbs
+++ b/toolkits/springer/packages/springer-hero/demo/index.hbs
@@ -1,12 +1,14 @@
 <h2>Default</h2>
 {{>hero default}}
+<h2 class="u-mt-32">Wider image minimum width</h2>
+<p>The layout will wrap at a wider container width.</p>
+{{>hero imageMinWider}}
+<h2 class="u-mt-32">Narrower content minimum width</h2>
+<p>The layout will wrap at a narrower container width.</p>
+{{>hero contentMinNarrower}}
+<h2 class="u-mt-32">Default with taller image</h2>
+{{>hero defaultTallerImage}}
 <h2 class="u-mt-32">Default without <code>imgSrc</code></h2>
 {{>hero defaultNoImage}}
-<h2 class="u-mt-32">Default with wider content area (<code>contentWidth</code>)</h2>
-{{>hero widerContent}}
-<h2 class="u-mt-32">Adjusted padding</h2>
-{{>hero adjustedPadding}}
 <h2 class="u-mt-32">Custom background color</h2>
 {{>hero customColor}}
-<h2 class="u-mt-32">Custom background color with no <code>content</code></h2>
-{{>hero customColorNoContent}}
