--- a/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
+++ b/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
@@ -1,27 +1,13 @@
 <div class="c-hero"{{#if color}} style="background-color: {{color}}"{{/if}}>
-	{{#if imageLeft}}
-		{{#if imageSrc}}
-			<div class="c-hero__image"{{#if imageMin}} style="--hero--image-min: {{imageMin}}"{{/if}}>
-				<img src="{{imageSrc}}" alt=""/>
-			</div>
+	<div class="c-hero__content"{{#if contentMin}} style="--hero--content-min: {{contentMin}};"{{/if}}>
+		<h1>{{title}}</h1>
+		{{#if content}}
+			{{{content}}}
 		{{/if}}
-		<div class="c-hero__content" style="{{#if contentBasis}}--hero--content-basis: {{contentBasis}};{{/if}}{{#if paddingInline}}--hero--content-padding-inline:{{paddingInline}};{{/if}}{{#if paddingBlock}}--hero--content-padding-block:{{paddingBlock}};{{/if}}">
-			<h1>{{title}}</h1>
-			{{#if content}}
-				{{{content}}}
-			{{/if}}
+	</div>
+	{{#if imageSrc}}
+		<div class="c-hero__image" {{#if imageMin}} style="--hero--image-min: {{imageMin}};"{{/if}}>
+			<img src="{{imageSrc}}" alt=""/>
 		</div>
-	{{else}}
-		<div class="c-hero__content" style="{{#if contentBasis}}--hero--content-basis: {{contentBasis}};{{/if}}{{#if paddingInline}}--hero--content-padding-inline:{{paddingInline}};{{/if}}{{#if paddingBlock}}--hero--content-padding-block:{{paddingBlock}};{{/if}}">
-			<h1>{{title}}</h1>
-			{{#if content}}
-				{{{content}}}
-			{{/if}}
-		</div>
-		{{#if imageSrc}}
-			<div class="c-hero__image"{{#if imageMin}} style="--hero--image-min: {{imageMin}}"{{/if}}>
-				<img src="{{imageSrc}}" alt=""/>
-			</div>
-		{{/if}}
 	{{/if}}
 </div>
