--- a/toolkits/global/packages/global-forms/demo/main.scss
+++ b/toolkits/global/packages/global-forms/demo/main.scss
@@ -2,6 +2,7 @@
 
 @import '../../../../../context/brand-context/default/scss/core.scss';
 @import '../../../../../context/brand-context/default/scss/enhanced.scss';
+@import '../../../../../context/brand-context/default/scss/60-utilities/spacing.scss';
 @import '../../../../../context/brand-context/default/scss/60-utilities/buttons.scss';
 
 // component SCSS
