--- a/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
@@ -16,7 +16,7 @@
 			</option>
 		{{/each}}
 	</select>
-	<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
+	<span class="c-forms__icon c-forms__icon--error">
 		<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
 			{{> globalFormIconSelect }}
 		</svg>
