--- a/toolkits/global/packages/global-forms/view/globalFormError.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormError.hbs
@@ -1,5 +1,5 @@
 <small class="c-forms__error" id="error-{{id}}">
-	<span class="c-forms__icon c-forms__icon--error u-display-flex u-align-items-center">
+	<span class="c-forms__icon c-forms__icon--error">
 		<svg class="u-icon u-mr-4" width="22" height="22" aria-hidden="true" focusable="false">
 			{{> globalFormIconError }}
 		</svg>
