--- a/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
@@ -6,7 +6,7 @@
 // Default setting
 @import 'default';
 
-$meta--font-size: .875rem;
+$meta--font-size: 1rem;
 $meta--font-family: $context--font-family-sans;
 $meta--color: greyscale(40);
 $meta--keyline-spacing: spacing(8);
