--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_default.scss
@@ -9,5 +9,5 @@ $skip-link--font: $context--font-family-sans;
 $skip-link--font-size: 1rem;
 $skip-link--color: white;
 $skip-link--hover-color: white;
-$skip-link--background-color: gray;
+$skip-link--background-color: #000;
 $skip-link--z-index: auto;
